--- a/dang-thats-delicious/views/register.pug
+++ b/dang-thats-delicious/views/register.pug
@@ -5,11 +5,11 @@ block content
         form.form(action="/register" method="POST")
             h2 #{title}
             label(for="name") Name
-            input(type="text" name="name" )
+            input(type="text" name="name" value=(body && body.name || "") )
             label(for="email") Email Address
-            input(type="email" name="email" )
+            input(type="email" name="email" value=(body &&body.email || "") )
             label(for="password") Password
-            input(type="password" name="password")
+            input(type="password" name="password" value=(body && body.password))
             label(for="password-confirm") Confirm Password
-            input(type="password" name="password-confirm")
+            input(type="password" name="password-confirm" value=(body && body.password-confirm))
             input.button(type="submit" value="Register")
