--- a/dang-thats-delicious/views/store.pug
+++ b/dang-thats-delicious/views/store.pug
@@ -1,4 +1,5 @@
 extends layout
+include mixins/_reviewForm
 
 block content
     .single
@@ -16,4 +17,7 @@ block content
                     li.tag
                         a.tag__link(href=`/tags/${tag}`)
                             span.tag__text ##{tag}
+
+        if(user)
+            +reviewForm(store)
 
