--- a/dang-thats-delicious/views/store.pug
+++ b/dang-thats-delicious/views/store.pug
@@ -2,6 +2,7 @@ extends layout
 include mixins/_reviewForm
 
 block content
+    pre=h.dump(store)
     .single
         .single__hero
             img.single__image(src=`/uploads/${store.photo || 'store.png'} `)
