--- a/dang-thats-delicious/views/store.pug
+++ b/dang-thats-delicious/views/store.pug
@@ -1,5 +1,6 @@
 extends layout
 include mixins/_reviewForm
+include mixins/_review
 
 block content
     pre=h.dump(store)
@@ -21,4 +22,10 @@ block content
 
         if(user)
             +reviewForm(store)
+
+        if(store.reviews)
+            .reviews
+                each review in store.reviews
+                    .review
+                        +review(review)
 
