--- a/dang-thats-delicious/views/store.pug
+++ b/dang-thats-delicious/views/store.pug
@@ -3,7 +3,7 @@ include mixins/_reviewForm
 include mixins/_review
 
 block content
-    pre=h.dump(store)
+    -//pre=h.dump(store)
     .single
         .single__hero
             img.single__image(src=`/uploads/${store.photo || 'store.png'} `)
